@@ -1,3 +1,8 @@
+2001-07-14  Akim Demaille  <akim@epita.fr>
+
+	* automake.in ($obsolete_rx): Stop at word boundaries.
+	(&scan_one_configure_file): Skip VERSION=$2.
+
 2001-07-02  Gary V. Vaughan  <gary@gnu.org>
 
 	* automake.in (scan_one_configure_file):  Diagnose use of
